--- a/src/ui/Message/Message.css
+++ b/src/ui/Message/Message.css
@@ -3,17 +3,15 @@ div.message {
     border-radius: 6px;
     display: flex;
     width: 100%;
-    font-size: var(--font-adaptive-small);
+    font-size: var(--font-adaptive-smallest);
 }
 
 div.message.error {
-    background-color: lightsalmon;
-    border-color: red;
+    border-color: var(--color-red);
 }
 
 div.message.warning {
-    background-color: lightyellow;
-    border-color: yellow;
+    border-color: var(--color-yellow);
 }
 
 div.message.info {
